--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "mongodb": "^3.6.6",
-    "mongoose": "^5.12.5"
+    "mongoose": "^5.12.5",
+    "validator": "^13.6.0"
   }
 }
