--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "dotenv -f ./.env nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
