--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "dotenv -f ./.env nodemon src/index.js"
+    "dev": "dotenv -f ./.env nodemon src/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "validator": "^13.6.0"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7"
   }
 }
