--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "dotenv -f ./.env nodemon src/index.js",
-    "test": "dotenv -f ./test.env jest --watch"
+    "dev": "dotenv -f ./config/.env nodemon src/index.js",
+    "test": "dotenv -f ./config/test.env jest --watch"
   },
   "jest": {
     "testEnvironment": "node"
